--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.3",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.4.29",
+    "vue-final-modal": "^4.5.4",
     "vue-router": "^4.4.2"
   },
   "devDependencies": {
